frontend/src/components/Progress/AnimeCard.css
.anime-card {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.anime-card > div {
    width: 100%
}

.anime-card-title {
    font-size: 1.5rem;
    text-align: center;
    font-family: "Montserrat", Arial, sans-serif;
}

.anime-progress-container {
    display: flex;
    flex-direction: column;
}

.card-image-div {
    width: 100%;
    display: flex;
    justify-content: center;
}

.card-image-div > img {
    max-height: 12.5rem;
}

.card-progress {
    text-align: center;
    font-family: "Lato", Arial, sans-serif;
    font-weight: bold;
    font-size: 1.5rem;
}

.card-progress-div {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 5px;
    padding-bottom: 5px;
}

.card-progress-buttons {
    padding-top: 15px;
    display: flex;
    gap: 20px;
}

/* Button designs */
.card-progress-button {
    display: inline-block;
    outline: 0;
    border: 0;
    cursor: pointer;
    border-radius: 8px;
    padding: 14px;
    font-size: 1.2rem;
    font-weight: 700;
    line-height: 1;
    transition: transform 200ms, background 200ms;
    font-family: "Montserrat", Arial, sans-serif;
}

.positive-button {
    background: var(--primary-200);
    color: var(--white);
}

.negative-button {
    background: var(--accent-400);
    color: var(--black);
}

.card-progress-button:hover{
    transform: translateY(-2px);
}

.positive-button[disabled] {
    opacity: 50%;
    pointer-events: none;
    user-select: none;
}

.positive-button:active {
    background: var(--primary-300);
}

.negative-button:active {
    background: var(--accent-500);
}

.anime-card-progress-buttons {
    display: flex;
    gap: 20px;
    align-items: center;
    padding-top: 10px;
    padding-bottom: 10px;
}

.anime-card-progress-buttons > button {
    width: 40px;
    height: 40px;
    font-size: 1.5rem;
}

.anime-card-change-progress-button {
    background-color: var(--white);
    color: var(--primary-200);
    border: 1px solid var(--primary-300);
    border-radius: 50%;
    text-align: center;
    user-select: none;
}

.anime-card-change-progress-button:hover{
    cursor: pointer;
}

.anime-card-change-progress-button:active{
    background-color: var(--primary-50);
}

.anime-card-change-progress-button[disabled] {
    opacity: 20%;
    pointer-events: none;
}

.loading-update-anime {
    height: auto;
    width: 75px;
    animation: spin 0.8s linear infinite;
    fill: var(--text);
}

.loading-update-anime-text {
    font-size: 1.25rem;
    font-family: "Lato", Arial, sans-serif;
}

@keyframes spin {
    0% {transform:rotate(0deg);}
    100% {transform:rotate(360deg);}
}

.loading-container-update-anime {
    margin-top: 10px;
}

.anime-card-status {
    height: 3.125rem;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

@keyframes fadeIn {
    from {
        opacity: 0;
        transform: translateY(-10px); /* Slightly move up */
    }
    to {
        opacity: 1;
        transform: translateY(0);
    }
}

.card-progress-button {
    animation: fadeIn 0.5s forwards; /* Play animation on appear */
}

